# quinoa

./: .gitignore  ACTION_PLAN.md  AGENTS.md  CODE_REVIEW.md  Cargo.toml  DEVICE_HOTPLUG_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  PAUSE_RESUME_IMPLEMENTATION.md  README.md  ROADMAP.md  opencode.json  pyproject.toml  quinoa.desktop  secrets.json.example  test_config.py
.agents/skills/pyqt6-dev/: SKILL.md
.agents/skills/pyqt6-dev/references/: layouts.md  threading.md
.agents/skills/ux-design/: SKILL.md
.agents/skills/ux-design/references/: heuristics.md
.beads/: issues.jsonl
.tickets/: q-0a20.md  q-0cc1.md  q-0ded.md  q-604a.md  q-69b3.md  q-71a4.md  q-7aa1.md  q-89f1.md  q-a07e.md  q-ae63.md  q-b2a9.md  q-bae7.md  q-d11d.md  q-e351.md  q-e7e2.md  quinoa-0n5.md  quinoa-3c0.md  quinoa-3dm.md  quinoa-7tp.md  quinoa-ccc.md  quinoa-dpx.md  quinoa-elz.md  quinoa-fbu.md  quinoa-g0l.md  quinoa-ihb.md  quinoa-jlh.md  quinoa-m7p.md  quinoa-wwy.md  quinoa-yk5.md  quinoa-z17.md  quinoa-z8s.md
granola/: __init__.py  config.py  constants.py  logging.py  main.py
granola/search/: __init__.py  chat_worker.py  file_search.py  sync_worker.py
granola/storage/: database.py
granola/transcription/: gemini.py  processor.py
granola/ui/: enhance_worker.py  history_tab.py  left_panel.py  main_window.py  markdown_converter.py  markdown_highlighter.py  middle_panel.py  record_tab.py  rich_text_editor.py  right_panel.py  settings_dialog.py  styles.py  transcribe_worker.py  transcript_handler.py  transcript_view.py  tray_icon.py
granola_audio/: Cargo.toml
granola_audio/src/: lib.rs
granola_audio/src/capture/: mod.rs  session.rs
granola_audio/src/device/: enumerate.rs  mod.rs  monitor.rs
quinoa/: __init__.py  compatibility.py  config.py  constants.py  logging.py  main.py
quinoa/audio/: __init__.py  compression_worker.py  converter.py  trimmer.py
quinoa/calendar/: __init__.py  auth.py  client.py  notification_worker.py  sync_worker.py
quinoa/search/: __init__.py  chat_worker.py  content_formatter.py  file_search.py  sync_worker.py
quinoa/storage/: database.py
quinoa/transcription/: __init__.py  gemini.py  processor.py
quinoa/ui/: audio_player.py  calendar_panel.py  enhance_worker.py  history_tab.py  left_panel.py  main_window.py  markdown_highlighter.py  middle_panel.py  record_tab.py  rich_text_editor.py  right_panel.py  settings_dialog.py  styles.py  transcribe_worker.py  transcript_handler.py  transcript_view.py  tray_icon.py  trim_view.py  waveform_widget.py
quinoa_audio/: Cargo.toml
quinoa_audio/src/: lib.rs
quinoa_audio/src/capture/: encoder.rs  mod.rs  session.rs
quinoa_audio/src/device/: enumerate.rs  monitor.rs
scripts/: bundle.sh
tests/manual/: test_audio.py  test_config.py  test_mixing.py  test_recording.py
tests/python/: test_integration.py
