[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "granola"
version = "0.1.0"
description = "A meeting recording and transcription app for Linux"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "google-genai>=0.3.0",
    "keyring>=24.0.0",
    "pydantic>=2.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "real-audio"]
module-name = "granola_audio"
manifest-path = "granola_audio/Cargo.toml"
